<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="25dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/profile_pemilik"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"/>

    <ImageButton
        android:id="@+id/btnGantiProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/camera"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="@id/profileImage"
        app:layout_constraintEnd_toEndOf="@id/profileImage"
        />

    <EditText
        android:id="@+id/edtNama"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        android:hint="@string/nama" />

    <EditText
        android:id="@+id/edtNomorTelepon"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/edtNama"
        android:inputType="phone"
        android:hint="@string/no_hp" />

    <Button
        android:id="@+id/btnSimpan"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/edtNomorTelepon"
        android:text="@string/simpan_profil" />
</androidx.constraintlayout.widget.ConstraintLayout>
