<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <RelativeLayout
        android:id="@+id/searchContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_border"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_hint" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/mainContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_prediksi"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/deteksi_gambar" />

            <TextView
                android:id="@+id/txtPilihLimbah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/manrope_extrabold"
                android:text="@string/pilih_limbah"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2" />

            <TextView
                android:id="@+id/textNoResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:text="@string/pesan_pencarian"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
    




</LinearLayout>