<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrediksiActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_predictLimbah"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginVertical="40dp"
            android:background="@color/grey"
            android:scaleType="centerCrop"
            android:src="@drawable/image_waste_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/btn_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/btn_predictLimbah"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_predictLimbah">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_kamera"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="15dp"
                android:backgroundTint="@color/light_green"
                android:fontFamily="@font/manrope_regular"
                android:text="@string/btn_kamera"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_galeri"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/light_green"
                android:fontFamily="@font/manrope_regular"
                android:text="@string/btn_galeri"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_predictLimbah"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/btn_prediksi"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_layout" />

        <TextView
            android:id="@+id/txt_prediksi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/manrope_extrabold"
            android:gravity="center"
            android:text="@string/txt_prediksi"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_predictLimbah" />

        <LinearLayout
            android:id="@+id/wrap_prediksi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_prediksi">

            <ImageView
                android:id="@+id/iv_tong"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                tools:src="@drawable/tong_plastik" />

            <TextView
                android:id="@+id/result_prediksi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_extrabold"
                android:textColor="@color/dark_green"
                android:textSize="24sp"
                tools:text="@string/txt_prediksi" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvWasteManagementInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/manrope_regular"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wrap_prediksi"
            tools:text="Deskripsi" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_artikel"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWasteManagementInfo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/image_artikel"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    tools:srcCompat="@drawable/image_artikel" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="22dp"
                            android:src="@drawable/rounded_corner"
                            app:tint="@color/light_green" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="14dp"
                            android:paddingTop="2dp"
                            android:paddingEnd="8dp"
                            android:text="@string/artikel_limbah"
                            android:textColor="@android:color/white"
                            android:textSize="12sp" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/deskripsi_artikel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:layout_marginTop="8dp"
                        tools:text="Mikroplastik dapat mengancam kesehatan tubuh" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/link_artikel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/url_artikel"
                            android:textSize="13sp" />

                        <ImageView
                            android:id="@+id/panah_artikel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/arrow_right" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_video"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_artikel">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/image_video"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    tools:srcCompat="@drawable/image_video" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="22dp"
                            android:src="@drawable/rounded_corner"
                            app:tint="@color/light_green" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="14dp"
                            android:paddingTop="2dp"
                            android:paddingEnd="8dp"
                            android:text="@string/video_limbah"
                            android:textColor="@android:color/white"
                            android:textSize="12sp" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/deskripsi_video"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textSize="15sp"
                        tools:text="Mengubah sampah plastik menjadi harta" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/link_video"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/url_video"
                            android:textSize="13sp" />

                        <ImageView
                            android:id="@+id/panah_video"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/arrow_right" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/keterangan_limbah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/manrope_extrabold"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_video"
            tools:text="Keterangan" />

        <LinearLayout
            android:id="@+id/btnInfo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/grey_box"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keterangan_limbah">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/maps_lokasi"
                android:src="@drawable/baseline_location" />

            <TextView
                android:id="@+id/tvButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/manrope_regular"
                android:text="@string/info_lokasi"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>